objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Days__c</fullName>
        <label>Activity Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bequest</fullName>
                </value>
                <value>
                    <fullName>HEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depended_Task_Name__c</fullName>
        <label>Depended Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Key__c</fullName>
        <label>Group Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Workflow_Name__c</fullName>
        <label>Next Workflow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skip_WhatId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip WhatId</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_WhoId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip WhoId</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>